liraraian login and user login

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=MLewGJtaxNqIvpastWGjDI2jrmzuujQL
+APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PORT=3306
+DB_DATABASE=laravel51ltslibrarysystem
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
