--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "appzcoder/crud-generator": "^1.1",
-        "laravelcollective/html": "5.1.*"
+        "laravelcollective/html": "5.1.*",
+        "sarav/laravel-multiauth": "^0.0.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
