--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.1.*",
         "appzcoder/crud-generator": "^1.1",
         "laravelcollective/html": "5.1.*",
-        "sarav/laravel-multiauth": "^0.0.7"
+        "sarav/laravel-multiauth": "^0.0.7",
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
